[package]
name = "dotman"
version = "0.1.0"
edition = "2024"
description = "A simple, fast, and reliable dotfiles manager written in Rust."
authors = ["Sirisak Chantanate <maicmi@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
home = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"